--- a/babel.config.json
+++ b/babel.config.json
@@ -5,7 +5,7 @@
             {
                 "targets": "> 0.5%, last 2 versions, Firefox ESR, not dead"
             }
-        ]
-    ],
-    "plugins": ["@babel/plugin-proposal-class-properties"]
+        ],
+        ["@babel/preset-react"]
+    ]
 }
