--- a/babel.config.json
+++ b/babel.config.json
@@ -1,11 +1,12 @@
 {
     "presets": [
         [
-            "@babel/env",
+            "@babel/preset-env",
             {
                 "targets": "> 0.5%, last 2 versions, Firefox ESR, not dead"
             }
         ],
-        ["@babel/preset-react"]
+        "@babel/preset-typescript",
+        "@babel/preset-react"
     ]
 }
