--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-ts-starter",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "react-ts-starter",
     "main": "index.js",
     "scripts": {
@@ -30,7 +30,10 @@
         "@babel/plugin-proposal-class-properties": "^7.12.1",
         "@babel/preset-env": "^7.12.1",
         "@babel/preset-react": "^7.12.10",
+        "@babel/preset-typescript": "^7.12.7",
         "@godaddy/dmd": "^1.0.3",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^5.0.0",
